# wsredis

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  test_query.http
src/: constants.rs  main.rs  pubsub.rs  types.rs
src/config/: mod.rs  redis_config.rs  server_config.rs
src/handler/: auth.rs  mod.rs  register.rs  table_list.rs  ws_connection.rs
src/router/: auth_route.rs  filter.rs  mod.rs  register_route.rs  table_list_route.rs  ws_route.rs
