[package]
name = "wsredis"
version = "0.2.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.16"
redis = { version = "0.25", features = ["aio", "tokio-comp"] }
futures = "0.3"
serde_json = "1.0"
tokio-stream = "0.1"
serde = { version = "1.0.217", features = ["derive"] }
rust-argon2 = "2.1"

[dependencies.uuid]
version = "1.12.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]